--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/auth-ja.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/auth-ja.json
@@ -8,12 +8,12 @@
   "common": {
     "alreadyRegistered": "すでに登録済ですか? ここからサインインしてください",
     "confirmNewPassword": {
-      "error": "ja_Password confirmation doesn't match Password",
+      "error": "確認用パスワードとパスワードが一致しません",
       "label": "新規パスワードを確認する"
     },
     "email": {
-      "error": "ja_Email cannot be empty",
-      "emailTaken": "ja_Email has already been taken. Please choose another value.",
+      "error": "Eメールは空欄にできません",
+      "emailTaken": "メールは、すでに使われています。 別の値を選択してください。",
       "label": "Eメールアドレス",
       "whoseEmail": "どなたのEメールアドレスを入力しますか?",
       "whoseEmailTooltip": "あなたがA-T患者であるお子様(たち) の親/法的保護者である場合には、あなた自身のEメールアドレスを使用してください。このアドレスへ、グローバル A-T ファミリーデータプラットフォームに登録された方々に関するご連絡をいたします。"
@@ -22,16 +22,16 @@
     "joinUs": "参加する",
     "or": "または",
     "password": {
-      "error": "ja_at least 8 characters including: a lower-case letter, an upper-case letter, a number, a special character (such as !@#$%^&*).",
+      "error": "少なくとも8文字で、英大文字小文字、数字、特殊文字(!@#$%^&*など)を含めてください。",
       "label": "パスワード"
     },
     "reenter": {
-      "error": "ja_Password confirmation doesn't match Password",
+      "error": "確認用パスワードとパスワードが一致しません",
       "label": "パスワードを再入力してください"
     },
     "resendInstructions": "確認方法を再送する",
     "resetPassword": {
-      "error": "ja_at least 8 characters including: a lower-case letter, an upper-case letter, a number, a special character (such as !@#$%^&*).",
+      "error": "少なくとも8文字で、英大文字小文字、数字、特殊文字(!@#$%^&*など)を含めてください。",
       "label": "新規パスワード"
     },
     "signin": "サインイン",
@@ -57,8 +57,8 @@
     "useEmail": "Eメールアドレスを使う:"
   },
   "modal": {
-    "InvalidLogin": "ja_Invalid email or password",
-    "PasswordResetError": "ja_There was an error processing the password reset.",
+    "InvalidLogin": "Eメールまたはパスワードが無効です",
+    "PasswordResetError": "パスワードのリセット中にエラーが発生しました。",
     "SuccessChangedPassword": "パスワードが変更されました。",
     "YouWillGetInstructions": "数分以内に、パスワードのリセット方法について説明したEメールが届きます。"
   },
